# amplifier-bundle-dot-docs

./: README.md  bundle.md  pyproject.toml
behaviors/: dot-docs.yaml
context/: dot-docs-awareness.md  dot-quality-standards.md  prescan-prompt.md  synthesis-prompt.md
docs/flows/: discovery-flow.dot  investigate-flow.dot  prescan-flow.dot  synthesis-flow.dot
docs/plans/: 2026-03-12-dotfiles-discovery-implementation.md  2026-03-12-task-2-dot-validation-utilities.md  2026-03-15-dot-graph-integration-implementation.md  2026-03-26-investigation-recipe-design.md  2026-03-26-phase1-foundation-fixes-implementation.md  2026-03-26-phase2-prescan-upgrade-implementation.md  2026-03-26-phase3-investigation-wiring-implementation.md  2026-03-29-coe-operational-fixes-implementation.md  2026-03-29-three-wrapper-architecture-design.md
recipes/: dotfiles-discovery.dot  dotfiles-discovery.yaml  dotfiles-investigate.dot  dotfiles-investigate.yaml  dotfiles-prescan.dot  dotfiles-prescan.yaml  dotfiles-synthesis.dot  dotfiles-synthesis.yaml
src/dotfiles_discovery/: __init__.py  discovery_metadata.py  structural_change.py
tests/: conftest.py  test_discovery_recipe.py  test_dot_validation.py  test_investigation_recipe.py  test_phase3_final_validation.py  test_readme_compliance.py  test_reconciliation.py  test_synthesis_artifacts.py
tools/dotfiles_discovery/: content_hash.py  dot_validation.py  reconciliation.py
