[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dotfiles_discovery"]

[project]
name = "dotfiles-discovery"
version = "0.1.0"
description = "DOT graph discovery tooling for Amplifier repos"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["src", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
